--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: zoom-backend
     env: node
-    rootDir: ./
+    rootDir: ./backend
     buildCommand: npm install
     startCommand: node src/app.js
     envVars:
