--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,8 @@ services:
   - type: web
     name: zoom-backend
     env: node
-    rootDir: ./
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && node src/app.js
+    buildCommand: npm install --prefix backend
+    startCommand: node backend/src/app.js
     envVars:
       - key: PORT
         value: 10000
