Fix backend paths in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: zoom-backend
     env: node
-    buildCommand: npm install --prefix backend
-    startCommand: node backend/src/app.js
+    rootDir: ./
+    buildCommand: cd backend && npm install
+    startCommand: cd backend && node src/app.js
     envVars:
       - key: PORT
         value: 10000
