--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
-    "build": "npm install",
-    "prod": "pm2 start src/app.js"
+    "build": "npm rebuild bcrypt --build-from-source && npm install",
+    "prod": "pm2 start src/app.js",
+    "render-build": "npm install && npm rebuild bcrypt --build-from-source"
   },
   "author": "apnacollege",
   "license": "ISC",
